--- a/en/pictures-of-finnish-nature/summer/_posts/2015-07-14-00007.md
+++ b/en/pictures-of-finnish-nature/summer/_posts/2015-07-14-00007.md
@@ -2,14 +2,18 @@
 layout: page
 image:
   feature:
-  teaser: https://lh3.googleusercontent.com/MqfkaGN-V_YhetQncL4f8vVIsAJi-vfxPuxdIKd7OAM=w245
+  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAB8tj7OCFsBvdRDfQGS_8k6a/luontokuvat/kes%C3%A4/5/DSC10915-245px.jpg
   thumb:
 ---
 
-[![](https://lh3.googleusercontent.com/fiwa-mNceTu4VWPVln1BxtdO_GUVa5e6T32kPI481PM=w800)](https://lh3.googleusercontent.com/fiwa-mNceTu4VWPVln1BxtdO_GUVa5e6T32kPI481PM=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAArniIKoorzFvsNIlLBeYExa/luontokuvat/kes%C3%A4/5/DSC10034-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAD-tkC-n5g72zYXN3nqZuEKa/luontokuvat/kes%C3%A4/5/DSC10034.jpg)
 
-[![](https://lh3.googleusercontent.com/wwSphfoUV1TP5dZLcaIPvnLI3JNaDPgKMmiGMIoP5jU=w800)](https://lh3.googleusercontent.com/wwSphfoUV1TP5dZLcaIPvnLI3JNaDPgKMmiGMIoP5jU=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAYefc4tZaxIqOQ8rq0Kpcxa/luontokuvat/kes%C3%A4/5/DSC10037-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAADWwJp2sohutrLUWMNPlF_a/luontokuvat/kes%C3%A4/5/DSC10037.jpg)
 
-[![](https://lh3.googleusercontent.com/2V_mJcwSgbrLE_VWIXTZml4M2cvW_vM6iakxGqHNn4c=w800)](https://lh3.googleusercontent.com/2V_mJcwSgbrLE_VWIXTZml4M2cvW_vM6iakxGqHNn4c=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADZiQ6ZyTn_qiB5aDGCW_6ha/luontokuvat/kes%C3%A4/5/DSC10904-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACBuG4jxEWRws4nD4YF3Fnga/luontokuvat/kes%C3%A4/5/DSC10904.jpg)
 
-[![](https://lh3.googleusercontent.com/Ek85EC3dem3loO-a_fvPs4nO_bKd4MOYWkwhr0wVzGU=w800)](https://lh3.googleusercontent.com/Ek85EC3dem3loO-a_fvPs4nO_bKd4MOYWkwhr0wVzGU=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAkL-U5ITDXgR7Geqo07SeMa/luontokuvat/kes%C3%A4/5/DSC10912-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAATGHF9YP7J3NKW3GUDOmtia/luontokuvat/kes%C3%A4/5/DSC10912.jpg)
+
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADSefQsjcdaGKNEeiQd37-ea/luontokuvat/kes%C3%A4/5/DSC10915-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAC2Np7V-PyumotXXEuQNiPza/luontokuvat/kes%C3%A4/5/DSC10915.jpg)
+
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABdxgR8wpEAkggGfBwxf9exa/luontokuvat/kes%C3%A4/5/DSC10917-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAoOiNWSsC6BEQXnYdPd4DQa/luontokuvat/kes%C3%A4/5/DSC10917.jpg)
