--- a/luontokuvat/syksy/_posts/2015-07-14-00014.md
+++ b/luontokuvat/syksy/_posts/2015-07-14-00014.md
@@ -2,10 +2,8 @@
 layout: page
 image:
   feature:
-  teaser: https://lh3.googleusercontent.com/EkqYm9jxm_woIZiZv6h5LmC8ABK7oF5jycpwz6Jvp7Y=w245
+  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACllVAcTSOgK5OZNywvoDO9a/luontokuvat/syksy/IMG_20131019_151644-245px.jpg
   thumb:
 ---
 
-[![](https://lh3.googleusercontent.com/0SulWl_-44vGM_JgT0i_XkVHTx8oVodBnjLyPOzUBGc=w800)](https://lh3.googleusercontent.com/0SulWl_-44vGM_JgT0i_XkVHTx8oVodBnjLyPOzUBGc=s0)
-
-[![](https://lh3.googleusercontent.com/R4M9pMcNjiBVjEx_1hNEapedz82remLmYGrFtAI2fXA=w800)](https://lh3.googleusercontent.com/R4M9pMcNjiBVjEx_1hNEapedz82remLmYGrFtAI2fXA=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACDGkoK8jk2E6tyQnL_yfqGa/luontokuvat/syksy/IMG_20131019_151644-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAARCe90nbtcKwyPaDP6MyX5a/luontokuvat/syksy/IMG_20131019_151644.jpg)
