--- a/en/pictures-of-finnish-nature/spring/_posts/2015-07-14-00029.md
+++ b/en/pictures-of-finnish-nature/spring/_posts/2015-07-14-00029.md
@@ -2,10 +2,10 @@
 layout: page
 image:
   feature:
-  teaser: https://lh3.googleusercontent.com/3YTP8pMuksWDG1cNd1dUYMKdWatYk7Tmao2P2tIaXng=w245
+  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADRvDYVgfbCF2YKFWAARAl8a/luontokuvat/kev%C3%A4t/DSC26058-245px.jpg
   thumb:
 ---
 
-[![](https://lh3.googleusercontent.com/MN_g2OaNlc2evPl6lfFvlTzFpfsusWWUypOpoyffdD0=w800)](https://lh3.googleusercontent.com/MN_g2OaNlc2evPl6lfFvlTzFpfsusWWUypOpoyffdD0=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACqaETIMbzzqjzu0FNg37npa/luontokuvat/kev%C3%A4t/DSC26051-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACe909u5bBZb6HAquOdUMNPa/luontokuvat/kev%C3%A4t/DSC26051.jpg)
 
-[![](https://lh3.googleusercontent.com/0C4UYeglh4gFkbHX0dNmV9LhwO3ETuyJ78CCYwEXh5o=w800)](https://lh3.googleusercontent.com/0C4UYeglh4gFkbHX0dNmV9LhwO3ETuyJ78CCYwEXh5o=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAB5k-54jwDoBI10x_lKNnJ_a/luontokuvat/kev%C3%A4t/DSC26058-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADyRQOilmDMxbUeuqVCN26Ca/luontokuvat/kev%C3%A4t/DSC26058.jpg)
