--- a/en/pictures-of-miki/_posts/2015-07-13-00027.md
+++ b/en/pictures-of-miki/_posts/2015-07-13-00027.md
@@ -2,8 +2,8 @@
 layout: page
 image:
   feature:
-  teaser: https://lh3.googleusercontent.com/81IQ_VQ6GBPeGbSTEvyExxDoeJY2AArPuG32wEbMPzM=w245
+  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABYV_EtQ-Vzz74AZ4M9CcFCa/mikin-kuvat/3/DSC08555-245px.jpg
   thumb:
 ---
 
-[![](https://lh3.googleusercontent.com/0xt3SLd5MQRt-lfsp65Pe83pjlHNGPgYNhzUgjAIegk=w800)](https://lh3.googleusercontent.com/0xt3SLd5MQRt-lfsp65Pe83pjlHNGPgYNhzUgjAIegk=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACKqckWxI1DEFllg4gcVEW9a/mikin-kuvat/3/DSC08555-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAALd5jZJL8rPwXgdv0RlL98a/mikin-kuvat/3/DSC08555.jpg)
