--- a/kuvia-mikista/_posts/2015-07-13-00033.md
+++ b/kuvia-mikista/_posts/2015-07-13-00033.md
@@ -2,10 +2,10 @@
 layout: page
 image:
   feature:
-  teaser: https://lh3.googleusercontent.com/6-9dStYIhN8yzoIaJgauV-GN29yFcZozPrEfOQ2Coho=w245
+  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABQUv6NYBsP-OHeI2oY_LPoa/mikin-kuvat/3/DSC12613-245px.jpg
   thumb:
 ---
 
-[![](https://lh3.googleusercontent.com/IHqOC6IMd-hv7drORe_61h6nkqawe5OktY-FlPU1Ib8=w800)](https://lh3.googleusercontent.com/IHqOC6IMd-hv7drORe_61h6nkqawe5OktY-FlPU1Ib8=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAfaNbsOfPzmsfWZ72qttXia/mikin-kuvat/3/DSC12608-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAA3RLBO6pEh9m4LazZhybAha/mikin-kuvat/3/DSC12608.jpg)
 
-[![](https://lh3.googleusercontent.com/t3AGOppczSxCTIGc8q05uHX8VSvBP4hWis_3pYarlIs=w800)](https://lh3.googleusercontent.com/t3AGOppczSxCTIGc8q05uHX8VSvBP4hWis_3pYarlIs=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABRGsBC4v1eAUN1F8njM4Lqa/mikin-kuvat/3/DSC12613-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAD81XJ4rWnfW-DnqbzBViQKa/mikin-kuvat/3/DSC12613.jpg)
