--- a/luontokuvat/syksy/_posts/2015-07-14-00071.md
+++ b/luontokuvat/syksy/_posts/2015-07-14-00071.md
@@ -2,8 +2,16 @@
 layout: page
 image:
   feature:
-  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADXYKUG_nmxHD-tuFaqcCd5a/luontokuvat/kes%C3%A4/3/DS19379-245px.jpg
+  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADx03MVvLw495_jtrEVgUWLa/luontokuvat/syksy/2/DS33326-245px.jpg
   thumb:
 ---
 
-[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAD4pgnELCsNHgJswdPl9ni1a/luontokuvat/kes%C3%A4/3/DS19379-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADJX3xbzwFMvrZNBpJ2Ccpoa/luontokuvat/kes%C3%A4/3/DS19379.jpg)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAS-DASm69rWfG0JUB9hhPUa/luontokuvat/syksy/2/DS33350-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAApt7-xsQgASvnay3p-08Mla/luontokuvat/syksy/2/DS33350.jpg)
+
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACNn0hpT8kMjbXU9MA6X9Xda/luontokuvat/syksy/2/DS33353-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAANKQhPanh-VGa0iw68bmD0a/luontokuvat/syksy/2/DS33353.jpg)
+
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADmgDZ9i-klAuW4EXRn6Iooa/luontokuvat/syksy/2/DS33343-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABbRKpfiz4LK5_W99r-WWdka/luontokuvat/syksy/2/DS33343.jpg)
+
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAClTTBFCoIPCe9Ym-vzmID7a/luontokuvat/syksy/2/DS33326-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADzniwzg3VfYflr7UAuLESoa/luontokuvat/syksy/2/DS33326.jpg)
+
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACfgfOzwLmRfMYyUHtUiXPwa/luontokuvat/syksy/2/DS33339-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADP4I8GmwersjT4eAXDMss7a/luontokuvat/syksy/2/DS33339.jpg)
