--- a/luontokuvat/syksy/_posts/2015-07-14-00074.md
+++ b/luontokuvat/syksy/_posts/2015-07-14-00074.md
@@ -2,12 +2,12 @@
 layout: page
 image:
   feature:
-  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAgvJxjK5EJLoJ4tYs8pr_0a/luontokuvat/syksy/2/DS31288_-245px.jpg
+  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAARXgmQor75tq88KjxbLgk4a/luontokuvat/syksy/2/DS35890-245px.jpg
   thumb:
 ---
 
-[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACmMMgprptcP6GUBYVpP3QRa/luontokuvat/syksy/2/DS31288-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAtlWQE1OXqz7hb2hAN63cBa/luontokuvat/syksy/2/DS31288.jpg)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADvpqJLJCD6g-mapBMhR6K4a/luontokuvat/syksy/2/DS35889-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADEjYwlbtElqkAnuwx8ectSa/luontokuvat/syksy/2/DS35889.jpg)
 
-[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAL9y0eXJu5pnoKIZRlOBbya/luontokuvat/syksy/2/DS31291-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACWn015AsoWedEKbWnVkfc-a/luontokuvat/syksy/2/DS31291.jpg)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABQfrlefCB2X3QFhw03gE19a/luontokuvat/syksy/2/DS35890-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAD9tgTaLDJuszCSxn30O3-ha/luontokuvat/syksy/2/DS35890.jpg)
 
-[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABQE2DsIh0sFcNVNEO7Chfla/luontokuvat/syksy/2/DS31296-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAABTvKx-bCz6DGZ2qppRTMaa/luontokuvat/syksy/2/DS31296.jpg)
+*Kuihtunut siankärsämö*
