--- a/en/pictures-of-miki/_posts/2015-07-13-00008.md
+++ b/en/pictures-of-miki/_posts/2015-07-13-00008.md
@@ -2,12 +2,12 @@
 layout: page
 image:
   feature:
-  teaser: https://lh3.googleusercontent.com/w5iuaGXwlda0YXHn67WiNExcZaFkDzJNBBjjvJzt6Tw=w245
+  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAD3eHmsajYUmAGtc1cntcjra/luontokuvat/syksy/IMG_1167-245px.jpg
   thumb:
 ---
 
-[![](https://lh3.googleusercontent.com/piLB0Ur4AR_-xYx_WKiptuyyJjPtKCTRsR5a3KqT8Eo=w800)](https://lh3.googleusercontent.com/piLB0Ur4AR_-xYx_WKiptuyyJjPtKCTRsR5a3KqT8Eo=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAZACh4_fTDmqi-GqyUmF2Xa/luontokuvat/syksy/IMG_1170-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADIlmUS6BjN8v6_qKKttR2ka/luontokuvat/syksy/IMG_1170.jpg)
 
-[![](https://lh3.googleusercontent.com/YShwN7aA2iHIgW-YQfwlgkF_8WLhH10L3ETpONnRbVo=w800)](https://lh3.googleusercontent.com/YShwN7aA2iHIgW-YQfwlgkF_8WLhH10L3ETpONnRbVo=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACtn9c5n99zn_p-viAidA_va/luontokuvat/syksy/IMG_1176-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAcj3qhDvxKbGjRxlPezpeua/luontokuvat/syksy/IMG_1176.jpg)
 
-[![](https://lh3.googleusercontent.com/eRWxO2LlM6PGSuocI1yUb-9xFOeBCf1eBtN3gUyiKGA=w800)](https://lh3.googleusercontent.com/eRWxO2LlM6PGSuocI1yUb-9xFOeBCf1eBtN3gUyiKGA=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABXhpghr0eXS8May3wXGR6ja/luontokuvat/syksy/IMG_1167-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADUHdCeeWQQ-wABqp59pkbJa/luontokuvat/syksy/IMG_1167.jpg)
