--- a/en/pictures-of-miki/_posts/2015-07-13-00010.md
+++ b/en/pictures-of-miki/_posts/2015-07-13-00010.md
@@ -2,8 +2,10 @@
 layout: page
 image:
   feature:
-  teaser: https://lh3.googleusercontent.com/r9a7SGb6bUNeWSy94qnJn8HwHTibTeb2-ojcAO0vYdg=w245
+  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACHEUIGiNAVu8_6CtUaEicGa/mikin-kuvat/2/IMG12097-245px.jpg
   thumb:
 ---
 
-[![](https://lh3.googleusercontent.com/HJxAqD9k7uLdTwSz3jnuXA5_i_1NvZ04Od1CvtNg1_Q=w800)](https://lh3.googleusercontent.com/HJxAqD9k7uLdTwSz3jnuXA5_i_1NvZ04Od1CvtNg1_Q=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADdxD7hQcdfzS-5CrmocFVUa/mikin-kuvat/2/IMG12096-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADwQ-_9Gtrj_zGrkW97rLDXa/mikin-kuvat/2/IMG12096.jpg)
+
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAB1Mrd_a0Xl6xYZxkNo2Trka/mikin-kuvat/2/IMG12097-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADC1trIuuhAP3csk04-uHm0a/mikin-kuvat/2/IMG12097.jpg)
