--- a/en/pictures-of-miki/_posts/2015-07-12-00002.md
+++ b/en/pictures-of-miki/_posts/2015-07-12-00002.md
@@ -2,8 +2,8 @@
 layout: page
 image:
   feature:
-  teaser: https://lh3.googleusercontent.com/8unz2Qx5yXbHmwOJXb_BO0nRGWizslrsC60yzSt40hc=w245
+  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAD-xCp6Qpnb-fEndGvWwbx2a/mikin-kuvat/2/IMG00049-245px.jpg
   thumb:
 ---
 
-[![](https://lh3.googleusercontent.com/-8GBBanN5h3KF8-xzOhLx888jZ0KxJY4R_8pjByXp1s=w800)](https://lh3.googleusercontent.com/-8GBBanN5h3KF8-xzOhLx888jZ0KxJY4R_8pjByXp1s=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACacqw5a7DbMHbuUKqTJUyUa/mikin-kuvat/2/IMG00049-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACTVvT7EFVjn685RQdlmKHBa/mikin-kuvat/2/IMG00049.jpg)
