--- a/en/pictures-of-miki/_posts/2015-07-13-00007.md
+++ b/en/pictures-of-miki/_posts/2015-07-13-00007.md
@@ -2,10 +2,10 @@
 layout: page
 image:
   feature:
-  teaser: https://lh3.googleusercontent.com/0Wg81my6BYF7fbfHmA73x1rarLSHM2Ou1vJlIHa6Amc=w245
+  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAApdq2b2fL7noSRHbEWC1XJa/luontokuvat/syksy/IMG_1145-245px.jpg
   thumb:
 ---
 
-[![](https://lh3.googleusercontent.com/BVoZshQohlFKtTmy1jBE8IK420IvlIfuvuOi1WeoZyk=w800)](https://lh3.googleusercontent.com/BVoZshQohlFKtTmy1jBE8IK420IvlIfuvuOi1WeoZyk=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACxxNpYxuiQOb_ZLcSpN49qa/luontokuvat/syksy/IMG_1145-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACbX_gPRt_A1pt8S0zPsy1ba/luontokuvat/syksy/IMG_1145.jpg)
 
-[![](https://lh3.googleusercontent.com/fZJcNxB9jSdCKwmTziOXvfGIqzbYaP0a6isi43KvDDQ=w800)](https://lh3.googleusercontent.com/fZJcNxB9jSdCKwmTziOXvfGIqzbYaP0a6isi43KvDDQ=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABSv3ONC3DPTATROItFP8GLa/luontokuvat/syksy/IMG_1147-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACyrVsKM5Kfw9o0o6rO_2hUa/luontokuvat/syksy/IMG_1147.jpg)
