--- a/kuvia-mikista/_posts/2015-07-13-00009.md
+++ b/kuvia-mikista/_posts/2015-07-13-00009.md
@@ -2,10 +2,10 @@
 layout: page
 image:
   feature:
-  teaser: https://lh3.googleusercontent.com/0PTfsPiYWE74Myfctp9Nt9F-l0CvVkq3ZnQTJuNXRmA=w245
+  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAD9IGN-W9d3aCJblaKO4yRqa/mikin-kuvat/2/IMG08275-245px.jpg
   thumb:
 ---
 
-[![](https://lh3.googleusercontent.com/ZqYxh4FVnH9u869hli7S5T-wa5E_paG7lfGEDkLRro4=w800)](https://lh3.googleusercontent.com/ZqYxh4FVnH9u869hli7S5T-wa5E_paG7lfGEDkLRro4=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAANr4D9RidHHMokPLTcdHJGa/mikin-kuvat/2/IMG08275-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABuwQgkXagzsXz1S8dnmzSIa/mikin-kuvat/2/IMG08275.jpg)
 
-[![](https://lh3.googleusercontent.com/CZy7RNC8-4ecIeUR16kzKunnEiDGxii5vjyBn9n5UMk=w800)](https://lh3.googleusercontent.com/CZy7RNC8-4ecIeUR16kzKunnEiDGxii5vjyBn9n5UMk=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACRoFRUKHwUJi8CM0R1cMELa/mikin-kuvat/2/IMG08280-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACr2oPsahyEjymV1UYhQoVma/mikin-kuvat/2/IMG08280.jpg)
