--- a/en/pictures-of-miki/_posts/2015-07-12-00004.md
+++ b/en/pictures-of-miki/_posts/2015-07-12-00004.md
@@ -2,7 +2,7 @@
 layout: page
 image:
   feature:
-  teaser: https://lh3.googleusercontent.com/uTOvQpHOwpPDt_c4fOGv2hv8mrUdCc_AC18IMx9LeTM=w245
+  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADUJSzXwnZws_viZv-N4Tkha/mikin-kuvat/2/IMG_9195-245px.jpg
   thumb:
 ---
 
