--- a/en/pictures-of-miki/_posts/2015-07-13-00013.md
+++ b/en/pictures-of-miki/_posts/2015-07-13-00013.md
@@ -2,8 +2,8 @@
 layout: page
 image:
   feature:
-  teaser: https://lh3.googleusercontent.com/nrVlQVGlRqCV0zDRIlvlRiPU7W7cxQHPMWD8rzJpVhw=w245
+  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADd4-TM4GQSQ0Lw-95GgdPaa/mikin-kuvat/2/20130524_162639-245px%20%282%29.jpg
   thumb:
 ---
 
-[![](https://lh3.googleusercontent.com/b13Zmj0NyrRXaTKgMBhmZ3KvDOqWiWVZ5uJ9bAxYxCE=w800)](https://lh3.googleusercontent.com/b13Zmj0NyrRXaTKgMBhmZ3KvDOqWiWVZ5uJ9bAxYxCE=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADgY1uF4ZQ7lzxiFo-KRaZsa/mikin-kuvat/2/20130524_162639-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABqwff35hq5AIsMLoAK266za/mikin-kuvat/2/20130524_162639.jpg)
