--- a/en/pictures-of-miki/_posts/2015-07-13-00015.md
+++ b/en/pictures-of-miki/_posts/2015-07-13-00015.md
@@ -2,8 +2,8 @@
 layout: page
 image:
   feature:
-  teaser: https://lh3.googleusercontent.com/AzkUHM7LzsKgXUjOcNP442wZ_NIcdWIehTH2D_arnGs=w245
+  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAD9OCFb2cM0EQ6ohIOULAY1a/mikin-kuvat/2/IMG23238-245px.jpg
   thumb:
 ---
 
-[![](https://lh3.googleusercontent.com/kLjPjN-DbthcJb3hfNWPaUQuqh7Ukm8k3cvmwkLVR-U=w800)](https://lh3.googleusercontent.com/kLjPjN-DbthcJb3hfNWPaUQuqh7Ukm8k3cvmwkLVR-U=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAHo4zdV-6wLcJnMAQ8yZIla/mikin-kuvat/2/IMG23238-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADpwHdPEUFertlFUOmrX42Ua/mikin-kuvat/2/IMG23238.jpg)
