--- a/en/pictures-of-miki/_posts/2015-07-13-00006.md
+++ b/en/pictures-of-miki/_posts/2015-07-13-00006.md
@@ -2,7 +2,7 @@
 layout: page
 image:
   feature:
-  teaser: https://lh3.googleusercontent.com/EB12FxyqUHeSspJNS0oB3o-zerXAWMHPin4dnKh2aV8=w245
+  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAD4J8Grmya6c7wozUqUVIiSa/mikin-kuvat/2/IMG_9336-245px.jpg
   thumb:
 ---
 
