--- a/en/pictures-of-miki/_posts/2015-07-13-00020.md
+++ b/en/pictures-of-miki/_posts/2015-07-13-00020.md
@@ -2,7 +2,7 @@
 layout: page
 image:
   feature:
-  teaser: https://lh3.googleusercontent.com/is1EDYRdAN7s6OjGP93ZE5IqWImy-jcnt_iDTBqJGJE=w245
+  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABNvbSLRpqsbSG0Bx3P-koEa/mikin-kuvat/2/IMG26254-245px.jpg
   thumb:
 ---
 
