--- a/en/pictures-of-miki/_posts/2015-07-13-00023.md
+++ b/en/pictures-of-miki/_posts/2015-07-13-00023.md
@@ -2,12 +2,12 @@
 layout: page
 image:
   feature:
-  teaser: https://lh3.googleusercontent.com/FU2CK5dowmyiE89MRI2KqV_-Nn-H4Qc1RLfWNL16_Rg=w245
+  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACWmK4kut46kioyyXOFb8Wya/mikin-kuvat/2/DSC05543-245px.jpg
   thumb:
 ---
 
-[![](https://lh3.googleusercontent.com/yJZysGmSDIdXpNufyjflO_OEjYj4cwVIQGugrIRmsFc=w800)](https://lh3.googleusercontent.com/yJZysGmSDIdXpNufyjflO_OEjYj4cwVIQGugrIRmsFc=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABlblX1OBTa6Zfg7pl0mi4ca/mikin-kuvat/2/DSC05528-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADkJQ2kItaELW-5snvd4Yh9a/mikin-kuvat/2/DSC05528.jpg)
 
-[![](https://lh3.googleusercontent.com/T9cBfUlkzvNeWIyn1e6f8uW92JLtKWDwPsmkJkTrw7c=w800)](https://lh3.googleusercontent.com/T9cBfUlkzvNeWIyn1e6f8uW92JLtKWDwPsmkJkTrw7c=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADRpVTr7lka2UZZj5h487Hfa/mikin-kuvat/2/DSC05534-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAB3G2SSaUGg5HZ7qyBrYx_Qa/mikin-kuvat/2/DSC05534.jpg)
 
-[![](https://lh3.googleusercontent.com/01GYlVatGlShL_gjhPNz8slG4bLxLqou1bopU1Lhh6Q=w800)](https://lh3.googleusercontent.com/01GYlVatGlShL_gjhPNz8slG4bLxLqou1bopU1Lhh6Q=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABlbGGQrmduhtHop8gmtS--a/mikin-kuvat/2/DSC05543-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACG_vAH8M5Kx4e2L3pnRa19a/mikin-kuvat/2/DSC05543.jpg)
