--- a/kuvia-mikista/_posts/2015-07-12-00001.md
+++ b/kuvia-mikista/_posts/2015-07-12-00001.md
@@ -2,7 +2,7 @@
 layout: page
 image:
   feature:
-  teaser: https://lh3.googleusercontent.com/35qIprkwvvv2_x7lViI2gY9pq3cgsbUgmOMPKrYlxhg=w245
+  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABElXSEuKjjumzKPaM7LotDa/mikin-kuvat/2/IMG_9106-245px.jpg
   thumb:
 ---
 
