--- a/kuvia-mikista/_posts/2015-07-12-00003.md
+++ b/kuvia-mikista/_posts/2015-07-12-00003.md
@@ -2,7 +2,7 @@
 layout: page
 image:
   feature:
-  teaser: https://lh3.googleusercontent.com/5g-z8RYBvvpVcgP3AJcVVJg1j-6Xmk9944i86T9m-IU=w245
+  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACJDYe_efZxFwzmCqtBST0wa/mikin-kuvat/2/IMG00163-245px.jpg
   thumb:
 ---
 
