--- a/kuvia-mikista/_posts/2015-07-13-00012.md
+++ b/kuvia-mikista/_posts/2015-07-13-00012.md
@@ -2,8 +2,8 @@
 layout: page
 image:
   feature:
-  teaser: https://lh3.googleusercontent.com/S0CekTWar7XL4V0aHTIMOnoW1U6WXbSdNIL-O4rDG3o=w245
+  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAA7e1f1ZDqDq3IrF_TVUue2a/mikin-kuvat/2/IMG17668-245px.jpg
   thumb:
 ---
 
-[![](https://lh3.googleusercontent.com/773u1vY7FlRgFJ8Br8QmxRmCvwQKC8D7NW0JIavxgMo=w800)](https://lh3.googleusercontent.com/773u1vY7FlRgFJ8Br8QmxRmCvwQKC8D7NW0JIavxgMo=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAIj-mFLSjcMAVlExs4DzWya/mikin-kuvat/2/IMG17668-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAChCibJZrFUOZHssf53gbm0a/mikin-kuvat/2/IMG17668.jpg)
