--- a/kuvia-mikista/_posts/2015-07-13-00014.md
+++ b/kuvia-mikista/_posts/2015-07-13-00014.md
@@ -2,8 +2,8 @@
 layout: page
 image:
   feature:
-  teaser: https://lh3.googleusercontent.com/qSToWJYWl5qqXpZS4dXHs-pCwzARsavdqgb87_jpHSk=w245
+  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAPEyrUNM_ZU81NPPzSvEYta/mikin-kuvat/2/IMG20836-245px.jpg
   thumb:
 ---
 
-[![](https://lh3.googleusercontent.com/3B2MicmPGF3bkFW1G3En9ef-YcufrajWANVYwaPXfMQ=w800)](https://lh3.googleusercontent.com/3B2MicmPGF3bkFW1G3En9ef-YcufrajWANVYwaPXfMQ=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAD2NOs1EoXfeKPR-TIvmFiga/mikin-kuvat/2/IMG20836-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABBfNFqCwtxkb4v9EMFU7-Ma/mikin-kuvat/2/IMG20836.jpg)
