--- a/kuvia-mikista/_posts/2015-07-13-00016.md
+++ b/kuvia-mikista/_posts/2015-07-13-00016.md
@@ -2,7 +2,7 @@
 layout: page
 image:
   feature:
-  teaser: https://lh3.googleusercontent.com/LxeGJYL3QhWfXbmUtcb12-QakGLxLXyTMaD1SyjDWbs=w245
+  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAB3DO-DD3M60FGdydY-bLZga/mikin-kuvat/2/IMG23835-245px.jpg
   thumb:
 ---
 
