--- a/kuvia-mikista/_posts/2015-07-13-00018.md
+++ b/kuvia-mikista/_posts/2015-07-13-00018.md
@@ -2,7 +2,7 @@
 layout: page
 image:
   feature:
-  teaser: https://lh3.googleusercontent.com/kAncAx-uakMND6JJxvgwjCoy-iitGVj7JxySF4J37q0=w245
+  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABswEHSx0qW0Qbxaq-VqbRea/mikin-kuvat/2/IMG25270-245px.jpg
   thumb:
 ---
 
