--- a/kuvia-mikista/_posts/2015-07-13-00019.md
+++ b/kuvia-mikista/_posts/2015-07-13-00019.md
@@ -2,7 +2,7 @@
 layout: page
 image:
   feature:
-  teaser: https://lh3.googleusercontent.com/0rYhiplcnHz_8Kyn9ixUlibz3TVvKr6wFn6UTOCeZAs=w245
+  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABnqgDf-vhAacCXuRzG1EJfa/luontokuvat/syksy/IMG26067-245px.jpg
   thumb:
 ---
 
