--- a/kuvia-mikista/_posts/2015-07-13-00021.md
+++ b/kuvia-mikista/_posts/2015-07-13-00021.md
@@ -2,10 +2,10 @@
 layout: page
 image:
   feature:
-  teaser: https://lh3.googleusercontent.com/GosQkHPmVix3BPkjNqcmcpdIFpN-UtFcDa_MSJmQ-n0=w245
+  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAJ0VSnJfsObHeqVku1FP1ra/mikin-kuvat/2/IMG26748-245px.jpg
   thumb:
 ---
 
-[![](https://lh3.googleusercontent.com/wZFZn9lgW7twxnYluJhZlGwdnRl2I4fJ0H9xx_tpEbo=w800)](https://lh3.googleusercontent.com/wZFZn9lgW7twxnYluJhZlGwdnRl2I4fJ0H9xx_tpEbo=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABpYHlj5DOx9Y8UhIXJOI6la/mikin-kuvat/2/IMG26750-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAC7tTm8sfl-oa-Ge4X7fZx2a/mikin-kuvat/2/IMG26750.jpg)
 
-[![](https://lh3.googleusercontent.com/Is-qz8wOv7z60KvLsm8l8K6FQ6iT4ED23JuWJK7sTcI=w800)](https://lh3.googleusercontent.com/Is-qz8wOv7z60KvLsm8l8K6FQ6iT4ED23JuWJK7sTcI=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABYKKmPIWrFgNjuqiZsRJPFa/mikin-kuvat/2/IMG26748-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAC2EYtmNkmBlL3oTCngpneXa/mikin-kuvat/2/IMG26748.jpg)
