--- a/kuvia-mikista/_posts/2015-07-13-00022.md
+++ b/kuvia-mikista/_posts/2015-07-13-00022.md
@@ -2,10 +2,10 @@
 layout: page
 image:
   feature:
-  teaser: https://lh3.googleusercontent.com/pNYBsuiU1X472kGLO_e2q2I8WFSPfnZktqILg1AmR8Y=w245
+  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAB0ZGPdwyoW6Xdy9FsqBr1-a/mikin-kuvat/2/IMG26851-245px.jpg
   thumb:
 ---
 
-[![](https://lh3.googleusercontent.com/cBV_bily61DUDq2qo29d8IYtauJnVwELgegtVpUsyf0=w800)](https://lh3.googleusercontent.com/cBV_bily61DUDq2qo29d8IYtauJnVwELgegtVpUsyf0=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACys3QpVPfxOyjyQPRb_zxca/mikin-kuvat/2/IMG26855-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABR_gcJeFcgs-igFUqXGoGta/mikin-kuvat/2/IMG26855.jpg)
 
-[![](https://lh3.googleusercontent.com/eHZiotHIbUT8lOdiZObASQjcDvGUrmsLJIogujK-27w=w800)](https://lh3.googleusercontent.com/eHZiotHIbUT8lOdiZObASQjcDvGUrmsLJIogujK-27w=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABVmdNz3YSmNCHpLqeSxei5a/mikin-kuvat/2/IMG26851-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADfFW8ibKmv3p1WWGZCpCzna/mikin-kuvat/2/IMG26851.jpg)
