--- a/kuvia-mikista/_posts/2015-07-13-00024.md
+++ b/kuvia-mikista/_posts/2015-07-13-00024.md
@@ -2,8 +2,8 @@
 layout: page
 image:
   feature:
-  teaser: https://lh3.googleusercontent.com/lO6QINGTuLknLHtG5xNwzfMrxusi3axV4YHebkCRei4=w245
+  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAB_Kh0uhB_t_dN6JZ0M_3vBa/mikin-kuvat/2/DSC07458-245px.jpg
   thumb:
 ---
 
-[![](https://lh3.googleusercontent.com/RFA7b304T1131j_VmTc3u92Osk8WBoFMg9KmgFTA7EI=w800)](https://lh3.googleusercontent.com/RFA7b304T1131j_VmTc3u92Osk8WBoFMg9KmgFTA7EI=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABK3PR7nz1wbwn8OIxrJShwa/mikin-kuvat/2/DSC07458-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABu_rUfb2eBvgfN5C25fZOUa/mikin-kuvat/2/DSC07458.jpg)
