--- a/kuvia-mikista/_posts/2015-07-13-00025.md
+++ b/kuvia-mikista/_posts/2015-07-13-00025.md
@@ -2,8 +2,8 @@
 layout: page
 image:
   feature:
-  teaser: https://lh3.googleusercontent.com/7WYLdsu_vT84j04Egip0uEJmssaNQL_vqq--5grFUBM=w245
+  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACMM1mkj52DhrvgSPQkSC-Ea/mikin-kuvat/2/DSC07786-245px.jpg
   thumb:
 ---
 
-[![](https://lh3.googleusercontent.com/3_rIvoLBcbVMLDP5fuUjsYRE8Ci8UWYQ04f48mJtii4=w800)](https://lh3.googleusercontent.com/3_rIvoLBcbVMLDP5fuUjsYRE8Ci8UWYQ04f48mJtii4=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAWe-60cEALpiVwpVWNC0q6a/mikin-kuvat/2/DSC07786-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABGt8b7pzh24Ts9CH42Wc7Ca/mikin-kuvat/2/DSC07786.jpg)
