--- a/kuvia-mikista/_posts/2015-07-13-00026.md
+++ b/kuvia-mikista/_posts/2015-07-13-00026.md
@@ -2,8 +2,8 @@
 layout: page
 image:
   feature:
-  teaser: https://lh3.googleusercontent.com/wefhftRX4jnXXqyhbNLCGkzJU9iqfKm2je5uO__6t08=w245
+  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAB3lLyqgYMtL47Mu8DyAjxQa/mikin-kuvat/2/DSC08357-245px.jpg
   thumb:
 ---
 
-[![](https://lh3.googleusercontent.com/MTMPvshXatkI9y41jLq40gavFtGtKfs-PmrsLKLhVq0=w800)](https://lh3.googleusercontent.com/MTMPvshXatkI9y41jLq40gavFtGtKfs-PmrsLKLhVq0=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABIsSaKVFm5kgBgODiGSkpoa/mikin-kuvat/2/DSC08357-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADK2UAEafgMG2jq3FCigblea/mikin-kuvat/2/DSC08357.jpg)
