--- a/en/pictures-of-miki/_posts/2015-07-13-00028.md
+++ b/en/pictures-of-miki/_posts/2015-07-13-00028.md
@@ -2,8 +2,8 @@
 layout: page
 image:
   feature:
-  teaser: https://lh3.googleusercontent.com/aIM9LkNtBRlpgaIR1mwoqulmBgzZqjn_8gWecZhV0qA=w245
+  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAbC38h0YIDI7Kc5CVo_izma/mikin-kuvat/2/DSC08886-245px.jpg
   thumb:
 ---
 
-[![](https://lh3.googleusercontent.com/8zR-1XmZJWh65Xu6ovpiZUWWVQ-Y_onDMAF0rGhZh5Y=w800)](https://lh3.googleusercontent.com/8zR-1XmZJWh65Xu6ovpiZUWWVQ-Y_onDMAF0rGhZh5Y=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAC481d9CvCLfc4JRJeigPBxa/mikin-kuvat/2/DSC08886-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABRt0qqo6jyQ4-fQ4dbn4Yla/mikin-kuvat/2/DSC08886.jpg)
