--- a/en/pictures-of-miki/_posts/2015-07-13-00029.md
+++ b/en/pictures-of-miki/_posts/2015-07-13-00029.md
@@ -2,8 +2,8 @@
 layout: page
 image:
   feature:
-  teaser: https://lh3.googleusercontent.com/KT3KiC71XVnHrJl7paICZiQ2TdW1Tctd3veUu-VJd0o=w245
+  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACial-bEYjitJc5daHneHq0a/mikin-kuvat/2/DSC09411-245px.jpg
   thumb:
 ---
 
-[![](https://lh3.googleusercontent.com/ntUzd_1rdeNB5TJwSPyZRWT03E1j9JT84vryR-uQ_gQ=w800)](https://lh3.googleusercontent.com/ntUzd_1rdeNB5TJwSPyZRWT03E1j9JT84vryR-uQ_gQ=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAA_jjgned_sMFG6mw7kNdPa/mikin-kuvat/2/DSC09411-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACobP-_W-mdmkNjR73PtQnRa/mikin-kuvat/2/DSC09411.jpg)
