--- a/en/pictures-of-miki/_posts/2015-07-13-00037.md
+++ b/en/pictures-of-miki/_posts/2015-07-13-00037.md
@@ -2,10 +2,10 @@
 layout: page
 image:
   feature:
-  teaser: https://lh3.googleusercontent.com/fBXDVbN_AHy3s005u_wavWdqiJAw2LqF4iEdGWiYuxk=w245
+  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADAcLw04bCWdVb6lmY2huqva/mikin-kuvat/2/DSC22074-245px.jpg
   thumb:
 ---
 
-[![](https://lh3.googleusercontent.com/P-VLhiPyjjkMXULBPkrOXQAaCSX7Fe5yntl9dX3IrUY=w800)](https://lh3.googleusercontent.com/P-VLhiPyjjkMXULBPkrOXQAaCSX7Fe5yntl9dX3IrUY=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACIM_NMcVBYKNNK1BKUgLnLa/mikin-kuvat/2/DSC22074-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABUnJ6Zb7DNPXEDPZmCLWKRa/mikin-kuvat/2/DSC22074.jpg)
 
-[![](https://lh3.googleusercontent.com/ehYutQQ4W8bhj1xqJJejD4k9JbkUHr4FBWphD3ddAqo=w800)](https://lh3.googleusercontent.com/ehYutQQ4W8bhj1xqJJejD4k9JbkUHr4FBWphD3ddAqo=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADPBFJGirlTafu-kKmlPl8Pa/mikin-kuvat/2/DSC22075-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAD4ITXQWGhpFW3tr8FDEayRa/mikin-kuvat/2/DSC22075.jpg)
