--- a/en/pictures-of-miki/_posts/2015-07-13-00041.md
+++ b/en/pictures-of-miki/_posts/2015-07-13-00041.md
@@ -2,8 +2,8 @@
 layout: page
 image:
   feature:
-  teaser: https://lh3.googleusercontent.com/rtLxLn3EsEGHReczX0WuKCUX6nymPgQdooMLSoBeB8o=w245
+  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAcZ3YMrTuHBZgsgYuQHd5Va/mikin-kuvat/2/DSC23761-245px.jpg
   thumb:
 ---
 
-[![](https://lh3.googleusercontent.com/sZrCdoW71aH1kRtnH-A2oAfS0pjsec7aiunECpDyQT0=w800)](https://lh3.googleusercontent.com/sZrCdoW71aH1kRtnH-A2oAfS0pjsec7aiunECpDyQT0=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABiiMLAY8rd0d4hcntbAkKZa/mikin-kuvat/2/DSC23761-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADJflK8fpv_hV8cACPdNftsa/mikin-kuvat/2/DSC23761.jpg)
