--- a/en/pictures-of-miki/_posts/2015-07-13-00040.md
+++ b/en/pictures-of-miki/_posts/2015-07-13-00040.md
@@ -2,8 +2,8 @@
 layout: page
 image:
   feature:
-  teaser: https://lh3.googleusercontent.com/JH3EBdSUOgQRQmzRiFOxWVKxlUeRD5leNC8Kfp0U2uM=w245
+  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACWEKivqLx23wFGUbq_eyRta/mikin-kuvat/2/DSC23679-245px.jpg
   thumb:
 ---
 
-[![](https://lh3.googleusercontent.com/zEEIysuM0MxnK-bKx3TJjHcGkEEruvUullGwzvM-td4=w800)](https://lh3.googleusercontent.com/zEEIysuM0MxnK-bKx3TJjHcGkEEruvUullGwzvM-td4=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAA0p8X0NvzPB1nP44O74rPZa/mikin-kuvat/2/DSC23679-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAohURHNIjvr80qYC1NH_7Za/mikin-kuvat/2/DSC23679.jpg)
