--- a/kuvia-mikista/_posts/2015-07-13-00030.md
+++ b/kuvia-mikista/_posts/2015-07-13-00030.md
@@ -2,10 +2,10 @@
 layout: page
 image:
   feature:
-  teaser: https://lh3.googleusercontent.com/uk2IkY5I9cKlWDjH1yv-GW-UIKShPAnH8RlFJeAD-Ho=w245
+  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABTMWJxiTpirXTBb_hg-n05a/mikin-kuvat/2/DSC10631-245px.jpg
   thumb:
 ---
 
-[![](https://lh3.googleusercontent.com/B0DV83o7-mwnlF2FkXd_hphIgG9MQ3CkjN9IE8V394I=w800)](https://lh3.googleusercontent.com/B0DV83o7-mwnlF2FkXd_hphIgG9MQ3CkjN9IE8V394I=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAD9U9SXchKMrZq3PqFMSPz6a/mikin-kuvat/2/DSC10630-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACX5e2lIHZG32hg5Fk8BWgoa/mikin-kuvat/2/DSC10630.jpg)
 
-[![](https://lh3.googleusercontent.com/SfK049j93qDetmrGbfTlNvlYlSIl8Y0z6YvDMCGZjsI=w800)](https://lh3.googleusercontent.com/SfK049j93qDetmrGbfTlNvlYlSIl8Y0z6YvDMCGZjsI=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACHbpZ-rcH67Vf6h_Gy5MVpa/mikin-kuvat/2/DSC10631-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACj3wf2cyCw3FJwV-zzkqKca/mikin-kuvat/2/DSC10631.jpg)
