--- a/kuvia-mikista/_posts/2015-07-13-00031.md
+++ b/kuvia-mikista/_posts/2015-07-13-00031.md
@@ -2,12 +2,12 @@
 layout: page
 image:
   feature:
-  teaser: https://lh3.googleusercontent.com/rwJzihREJSXDguY5NDM1l5VTl0ChYKcmTBgCMWEPTrQ=w245
+  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADTxtk4nMC8S2ANLiNqHOf8a/mikin-kuvat/2/DSC11443-245px.jpg
   thumb:
 ---
 
-[![](https://lh3.googleusercontent.com/BKX8b_1y8j2Uvqb1a_xwcxYZNrgV14nWxCA5NjJ_kOA=w800)](https://lh3.googleusercontent.com/BKX8b_1y8j2Uvqb1a_xwcxYZNrgV14nWxCA5NjJ_kOA=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAHngurHFSZ3inU24_5QVM0a/mikin-kuvat/2/DSC11356-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAB01DQIl6--1oQT9cHdmzGPa/mikin-kuvat/2/DSC11356.jpg)
 
-[![](https://lh3.googleusercontent.com/SYOH0GAwIxlqtJZ7eO-N8NKpxkmM3rd_9h-DTwIgGTM=w800)](https://lh3.googleusercontent.com/SYOH0GAwIxlqtJZ7eO-N8NKpxkmM3rd_9h-DTwIgGTM=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABhDp_Gxq1NVFfKKjyeuB0Ha/mikin-kuvat/2/DSC11424-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADDm7zVmKI2KK9MI2OSVe6aa/mikin-kuvat/2/DSC11424.jpg)
 
-[![](https://lh3.googleusercontent.com/L2FZkM3Nc3th7B81i2kRSGZNJe9DCP2inFES4SResYs=w800)](https://lh3.googleusercontent.com/L2FZkM3Nc3th7B81i2kRSGZNJe9DCP2inFES4SResYs=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAL72Fbgj4r6sQxoGDcYnmZa/mikin-kuvat/2/DSC11443-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACC-pJhVmEYLobgH6OI_-Dia/mikin-kuvat/2/DSC11443.jpg)
