--- a/kuvia-mikista/_posts/2015-07-13-00032.md
+++ b/kuvia-mikista/_posts/2015-07-13-00032.md
@@ -2,8 +2,8 @@
 layout: page
 image:
   feature:
-  teaser: https://lh3.googleusercontent.com/yZppqlZ8reLb6EADXeWUNegwgpCKPmCq3BI83ESKUuI=w245
+  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABh27tlaywIrOupOZFOcUNQa/mikin-kuvat/1/DSC12533-245px.jpg
   thumb:
 ---
 
-[![](https://lh3.googleusercontent.com/IWttbTNffH6nX-_7e-zwu1pfPdiQYD20ZCQrGHHlwjE=w800)](https://lh3.googleusercontent.com/IWttbTNffH6nX-_7e-zwu1pfPdiQYD20ZCQrGHHlwjE=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAz_VMWfsDoCjVCi8yLkN_va/mikin-kuvat/1/DSC12533-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABLHEgxpx5pPWhFi0V0uG6Sa/mikin-kuvat/1/DSC12533.jpg)
