--- a/kuvia-mikista/_posts/2015-07-13-00035.md
+++ b/kuvia-mikista/_posts/2015-07-13-00035.md
@@ -2,10 +2,10 @@
 layout: page
 image:
   feature:
-  teaser: https://lh3.googleusercontent.com/pTaNCPnSGrZCrqEPgQ_O6GU7yTMHhg4MJjitYfcRBZk=w245
+  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABnHYvrvj9R8c8cwGc3WcVKa/mikin-kuvat/2/DSC16343-245px.jpg
   thumb:
 ---
 
-[![](https://lh3.googleusercontent.com/-v8-6i5BJZn8T0VOoSgai6LcpMgwFQWlexJS1T0rLrw=w800)](https://lh3.googleusercontent.com/-v8-6i5BJZn8T0VOoSgai6LcpMgwFQWlexJS1T0rLrw=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABFtYeWyVcr22g8WJ8KQYzva/mikin-kuvat/2/DSC16371-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABOTLnn3tWLRQ0YLNKZoqhpa/mikin-kuvat/2/DSC16371.jpg)
 
-[![](https://lh3.googleusercontent.com/gh590bNVpyf_tR7DmyCSjxshKkg-MIDVTs2P6vokI6A=w800)](https://lh3.googleusercontent.com/gh590bNVpyf_tR7DmyCSjxshKkg-MIDVTs2P6vokI6A=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADN1w8Inh0dF1GoZq7rxgRUa/mikin-kuvat/2/DSC16343-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABS7IbujNbQMeKeq7H_XFK2a/mikin-kuvat/2/DSC16343.jpg)
