--- a/en/pictures-of-miki/_posts/2015-07-13-00043.md
+++ b/en/pictures-of-miki/_posts/2015-07-13-00043.md
@@ -2,8 +2,8 @@
 layout: page
 image:
   feature:
-  teaser: https://lh3.googleusercontent.com/To5ufh2rQvFR7N4JYQON4n9N21losn8nrDKl0DMqgsc=w245
+  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAB8Enyp3DiMO_5FKAdVIes2a/mikin-kuvat/2/DSC26152-245px.jpg
   thumb:
 ---
 
-[![](https://lh3.googleusercontent.com/jsu2CLVECGeBuUg_JgMuMS1rUaVBP5XLPD_b-df7ihg=w800)](https://lh3.googleusercontent.com/jsu2CLVECGeBuUg_JgMuMS1rUaVBP5XLPD_b-df7ihg=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABqAy___SPyEM40zCfimjOfa/mikin-kuvat/2/DSC26152-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACHX3Gyw8l5YcwpyHNFnVmDa/mikin-kuvat/2/DSC26152.jpg)
