--- a/en/pictures-of-miki/_posts/2015-07-13-00047.md
+++ b/en/pictures-of-miki/_posts/2015-07-13-00047.md
@@ -2,14 +2,14 @@
 layout: page
 image:
   feature:
-  teaser: https://lh3.googleusercontent.com/usdXycl5o0nPWPYFum-H75Tu43nhyJbQY--mZ2KyS7c=w245
+  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAA3li6XecAW0nGo-Ml-gdV7a/mikin-kuvat/1/DSC26740-245px.jpg
   thumb:
 ---
 
-[![](https://lh3.googleusercontent.com/zkvRYfeGA7Dn-Dw0gL1WqLUyGObtesfciG76xpx21-E=w800)](https://lh3.googleusercontent.com/zkvRYfeGA7Dn-Dw0gL1WqLUyGObtesfciG76xpx21-E=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACusU0wNBvBK6uFo01ZNXG8a/mikin-kuvat/1/DSC26928-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAnFpETOwVgSogBe2GF0gJaa/mikin-kuvat/1/DSC26928.jpg)
 
-[![](https://lh3.googleusercontent.com/9IMo72YRxyYUFDv3-ILIbHgoF1I_8Xpe-PLsq25-oiM=w800)](https://lh3.googleusercontent.com/9IMo72YRxyYUFDv3-ILIbHgoF1I_8Xpe-PLsq25-oiM=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAUA5JsKTKhMqlK2zkPbqkUa/mikin-kuvat/1/DSC26923-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAA70VPNzppfXcEfO6W9f_Wta/mikin-kuvat/1/DSC26923.jpg)
 
-[![](https://lh3.googleusercontent.com/3OJSLnu7_1UbQqIPoT4dB82QohFaTHykNGieYC5KiXs=w800)](https://lh3.googleusercontent.com/3OJSLnu7_1UbQqIPoT4dB82QohFaTHykNGieYC5KiXs=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAB_T5f7gtIdYanvB4PtvPlHa/mikin-kuvat/1/DSC26761-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAALkDJoyItRuDSFSQ2acX3za/mikin-kuvat/1/DSC26761.jpg)
 
-[![](https://lh3.googleusercontent.com/nBd9u7Rm-ic3gnnvbFO46UeGd_8huT6sJXQL7x5s4KM=w800)](https://lh3.googleusercontent.com/nBd9u7Rm-ic3gnnvbFO46UeGd_8huT6sJXQL7x5s4KM=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADsfG4MMX64vvf5zmYi3duea/mikin-kuvat/1/DSC26740-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAoM7J9uyeQVvGioXe5P87wa/mikin-kuvat/1/DSC26740.jpg)
