--- a/en/pictures-of-miki/_posts/2015-07-13-00055.md
+++ b/en/pictures-of-miki/_posts/2015-07-13-00055.md
@@ -2,18 +2,22 @@
 layout: page
 image:
   feature:
-  teaser: https://lh3.googleusercontent.com/Ptfvt1ZoOjasNSl6I4qQ03rss8pyEemnMjhn5a51tPQ=w245
+  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAcNGCfHDuYYbayC9jDHB-1a/mikin-kuvat/2/DSC32314-245px.jpg
   thumb:
 ---
 
-[![](https://lh3.googleusercontent.com/nOX043dDmSQY8yBJAiqg5JANwMjtxzSTeuCfkx3XNfQ=w800)](https://lh3.googleusercontent.com/nOX043dDmSQY8yBJAiqg5JANwMjtxzSTeuCfkx3XNfQ=s0)
+*Yep, there's a squirrel*
 
-[![](https://lh3.googleusercontent.com/IUFLQ_HbcHi8n2Iwo-oEavEUXUmWct_YVuKePt3iTU0=w800)](https://lh3.googleusercontent.com/IUFLQ_HbcHi8n2Iwo-oEavEUXUmWct_YVuKePt3iTU0=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABRQ9fPcZy6NmPWvV03jrKya/mikin-kuvat/2/DSC32319-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAoWBleoBYe89bLpbO5xiR1a/mikin-kuvat/2/DSC32319.jpg)
 
-[![](https://lh3.googleusercontent.com/xyftsOXs0THfIXYELp-kQRnz2qEB0mRJoshyI90JrVQ=w800)](https://lh3.googleusercontent.com/xyftsOXs0THfIXYELp-kQRnz2qEB0mRJoshyI90JrVQ=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABOiT4gQMoisjJeGRxZRlpaa/mikin-kuvat/2/DSC32314-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAC1etMlfi_qXBDEE_Rlny-Ia/mikin-kuvat/2/DSC32314.jpg)
 
-[![](https://lh3.googleusercontent.com/JIwZEhXEtlSM8KS6BGdinYBerBu9GfhQ0dUF16g8BXI=w800)](https://lh3.googleusercontent.com/JIwZEhXEtlSM8KS6BGdinYBerBu9GfhQ0dUF16g8BXI=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAM5jYH86AtY78Qtnubj8Sia/mikin-kuvat/2/DSC32313-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABRt4NYyW7XVBywwmZaHe0ba/mikin-kuvat/2/DSC32313.jpg)
 
-[![](https://lh3.googleusercontent.com/XauEJZCTM9cDrVTCjgOUvWfsFrehM02ZZLlM5jkf4cE=w800)](https://lh3.googleusercontent.com/XauEJZCTM9cDrVTCjgOUvWfsFrehM02ZZLlM5jkf4cE=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADNGmw04o0HI9AMelQBiw8Pa/mikin-kuvat/2/DSC32310-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAiN0MNeEd0nQXXC3gJaL76a/mikin-kuvat/2/DSC32310.jpg)
 
-[![](https://lh3.googleusercontent.com/0PLHfZzSK05Hm8eY2wUc5H3uBBI1qCRBJK5gFggA5_U=w800)](https://lh3.googleusercontent.com/0PLHfZzSK05Hm8eY2wUc5H3uBBI1qCRBJK5gFggA5_U=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADp0MxqVtXdzEKIxpOUC_H-a/mikin-kuvat/2/DSC32274-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACZ54n0qxO5o-UzMWjoZwvKa/mikin-kuvat/2/DSC32274.jpg)
+
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAA3Nziarr0-FIqmpM0nPJs9a/mikin-kuvat/2/DSC32305-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADBMn5OsuoGTEn9tBJZuL0ua/mikin-kuvat/2/DSC32305.jpg)
+
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABq6qNKZzCPSDcbsmzUrqNna/mikin-kuvat/2/DSC32283-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACbCeDBbZpUeKxnaZ8lGCfXa/mikin-kuvat/2/DSC32283.jpg)
