--- a/en/pictures-of-miki/_posts/2015-07-13-00038.md
+++ b/en/pictures-of-miki/_posts/2015-07-13-00038.md
@@ -2,9 +2,9 @@
 layout: page
 image:
   feature:
-  teaser: https://lh3.googleusercontent.com/2SvXKfHtiVlEmWjJ9ALGZGh9sLlpQmD4KcqMCorGIaM=w245
+  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAQBs5NkzYjbBrl0oqbHqDVa/mikin-kuvat/1/DSC01791-245px.jpg
   thumb:
 ---
 
-[![](https://lh3.googleusercontent.com/-A7eJe_M99kHxuZghcEZKdxyZCZzjW0b0pLSpTyq4rI=w800)](https://lh3.googleusercontent.com/-A7eJe_M99kHxuZghcEZKdxyZCZzjW0b0pLSpTyq4rI=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAreNSH0NsAV4CTX4d7gWoPa/mikin-kuvat/1/DSC01791-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADvSM1Wi-Ptv-6BrFnpFjaMa/mikin-kuvat/1/DSC01791.jpg)
 
