--- a/en/pictures-of-miki/_posts/2015-07-13-00050.md
+++ b/en/pictures-of-miki/_posts/2015-07-13-00050.md
@@ -2,8 +2,8 @@
 layout: page
 image:
   feature:
-  teaser: https://lh3.googleusercontent.com/-WK7SM0RFLuCULgYFHXl3RY3FcM22DKA5Xo8u_04DGM=w245
+  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABDKx20poIhlCCqIRajf7Dfa/mikin-kuvat/2/DSC29282-245px.jpg
   thumb:
 ---
 
-[![](https://lh3.googleusercontent.com/3ZELhVfWbSADpyB56-P7B17NHowNFXzEQh4XGbzw-O8=w800)](https://lh3.googleusercontent.com/3ZELhVfWbSADpyB56-P7B17NHowNFXzEQh4XGbzw-O8=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAD9IO-L_zclVq9a3JdH5wB-a/mikin-kuvat/2/DSC29282-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACnO1N3K4ON_K0KtXB9_dEYa/mikin-kuvat/2/DSC29282.jpg)
