--- a/kuvia-mikista/_posts/2015-07-13-00044.md
+++ b/kuvia-mikista/_posts/2015-07-13-00044.md
@@ -2,8 +2,8 @@
 layout: page
 image:
   feature:
-  teaser: https://lh3.googleusercontent.com/IKku9lD-ym7BCVDmPZ9mvNoecPNK5bEnqLOypJVbka8=w245
+  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACsL94tT8FSeDEd0z5Bh7ZVa/mikin-kuvat/2/DSC26182-245px.jpg
   thumb:
 ---
 
-[![](https://lh3.googleusercontent.com/nagC0X6rimOdI04Sq65Rxd35WKBtA0CTG_OED3wxdxE=w800)](https://lh3.googleusercontent.com/nagC0X6rimOdI04Sq65Rxd35WKBtA0CTG_OED3wxdxE=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADlqFcjn6vgVWYY7kqkpGy0a/mikin-kuvat/2/DSC26182-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADkteXkppBzbCWupWPU4h25a/mikin-kuvat/2/DSC26182.jpg)
